  broke date specs relative to now, such as: printf '%T\n' 'in 10 weeks'

- Fixed incorrect behaviour that occurred when IFS, PATH, SHELL,
  FPATH, CDPATH, SECONDS, ENV, LANG, LC_ALL, LC_CTYPE, LC_MESSAGES,
  LC_COLLATE, LC_NUMERIC, or LC_TIME were declared as a local
  variable within a function using 'typeset' while a custom shell
  discipline function was defined for them in the global scope.

2026-01-21:

- Fixed several IFS field splitting bugs in read(1) that occurred
  when it is given a null delimiter (read -d '').

2025-09-30:

- The rm path-bound built-in command from libcmd no longer suppresses error
  messages when the -f/--force option is used.

2025-06-14:

- Fixed a bug occurring on systems with posix_spawn(3), spawnve(2), and
  spawn(2), which when exploited could cause ksh93 to execute scripts
  without a shebang with a shell other than itself, provided /bin/ksh
  was hijacked, or in the case of ksh being unable to obtain it's own
  executable path, whatever the SHELL variable was set to.

- Fixed a bug that could cause scripts without a shebang to run
  without POSIX mode enabled when executed in a virtual subshell.

- Fixed a bug that could allow an attacker to hijack ksh93 during
  shell initialization to execv a shell other than ksh itself, leading to
  the ksh process being surreptitiously replaced with bash, zsh, or
  really anything, provided the binary name ends with the letters
  'sh'.

2025-05-31:

- Fixed a bug that caused the multiline option to break when PS*
  prompts use the kitty terminal's escape sequence (e.g. $'\E[4:4m'
  in the PS1 prompt for formatting spaced dots).

2025-05-29:

- Fixed a serious but rarely occurring regression that corrupts variable
  names in assignments. It could be triggered in large scripts and cause a
  spurious "invalid variable name" error. Bug introduced on 2024-01-16.

- Restored the ability to import environment variables with multibyte UTF-8